# wsignals

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml
tests/: test_signal.py
wsignals/: __init__.py  signals.py
