[project]
name = "wsignals"
version = "0.2.1"
description = "Library for event emitting and handling"
requires-python = ">=3.6"
readme = "README.md"
authors = [{ name = "WuMT" }]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/wumtdev/wsignals"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
